--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "nextn",
+  "name": "kevin-portfolio",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/KevinGeorge100/kevin-portfolio.git"
+  },
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
