--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,9 @@ jobs:
         run: npm install
       - name: Build with Next.js
         run: npm run build
-      - name: Create .nojekyll
-        run: touch out/.nojekyll
+      - name: Fix static files for GitHub Pages
+        run: |
+          touch out/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
