--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/KevinGeorge100/kevin-portfolio.git"
   },
   "scripts": {
-    "dev": "next dev --turbopack -p 9000",
+    "dev": "next dev -p 9000",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
